@@ -23,7 +23,7 @@
         <dependency>
             <groupId>org.asynchttpclient</groupId>
             <artifactId>async-http-client</artifactId>
-            <version>2.0.24</version>
+            <version>2.0.26</version>
         </dependency>
     </dependencies>
 
